@@ -92,7 +92,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|LinkedHashMap
 import|;
 end_import
 
@@ -123,18 +143,6 @@ operator|.
 name|util
 operator|.
 name|HashMap
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|ConcurrentHashMap
 import|;
 end_import
 
@@ -280,6 +288,24 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
+DECL|field|METADATA_CACHE_ENTRIES_KEY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|METADATA_CACHE_ENTRIES_KEY
+init|=
+literal|"fs.har.metadatacache.entries"
+decl_stmt|;
+DECL|field|METADATA_CACHE_ENTRIES_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|METADATA_CACHE_ENTRIES_DEFAULT
+init|=
+literal|10
+decl_stmt|;
 DECL|field|VERSION
 specifier|public
 specifier|static
@@ -292,7 +318,6 @@ decl_stmt|;
 DECL|field|harMetaCache
 specifier|private
 specifier|static
-specifier|final
 name|Map
 argument_list|<
 name|URI
@@ -300,15 +325,6 @@ argument_list|,
 name|HarMetaData
 argument_list|>
 name|harMetaCache
-init|=
-operator|new
-name|ConcurrentHashMap
-argument_list|<
-name|URI
-argument_list|,
-name|HarMetaData
-argument_list|>
-argument_list|()
 decl_stmt|;
 comment|// uri representation of this Har filesystem
 DECL|field|uri
@@ -369,6 +385,55 @@ name|fs
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|initializeMetadataCache (Configuration conf)
+specifier|private
+specifier|synchronized
+name|void
+name|initializeMetadataCache
+parameter_list|(
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+if|if
+condition|(
+name|harMetaCache
+operator|==
+literal|null
+condition|)
+block|{
+name|int
+name|cacheSize
+init|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+name|METADATA_CACHE_ENTRIES_KEY
+argument_list|,
+name|METADATA_CACHE_ENTRIES_DEFAULT
+argument_list|)
+decl_stmt|;
+name|harMetaCache
+operator|=
+name|Collections
+operator|.
+name|synchronizedMap
+argument_list|(
+operator|new
+name|LruCache
+argument_list|<
+name|URI
+argument_list|,
+name|HarMetaData
+argument_list|>
+argument_list|(
+name|cacheSize
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|/**    * Initialize a Har filesystem per har archive. The     * archive home directory is the top level directory    * in the filesystem that contains the HAR archive.    * Be careful with this method, you do not want to go     * on creating new Filesystem instances per call to     * path.getFileSystem().    * the uri of Har is     * har://underlyingfsscheme-host:port/archivepath.    * or     * har:///archivepath. This assumes the underlying filesystem    * to be used in case not specified.    */
 annotation|@
 name|Override
@@ -386,6 +451,12 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+comment|// initialize the metadata cache, if needed
+name|initializeMetadataCache
+argument_list|(
+name|conf
+argument_list|)
+expr_stmt|;
 comment|// decode the name
 name|URI
 name|underLyingURI
@@ -4729,6 +4800,80 @@ block|{
 return|return
 name|metadata
 return|;
+block|}
+DECL|class|LruCache
+specifier|private
+specifier|static
+class|class
+name|LruCache
+parameter_list|<
+name|K
+parameter_list|,
+name|V
+parameter_list|>
+extends|extends
+name|LinkedHashMap
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+block|{
+DECL|field|MAX_ENTRIES
+specifier|private
+specifier|final
+name|int
+name|MAX_ENTRIES
+decl_stmt|;
+DECL|method|LruCache (int maxEntries)
+specifier|public
+name|LruCache
+parameter_list|(
+name|int
+name|maxEntries
+parameter_list|)
+block|{
+name|super
+argument_list|(
+name|maxEntries
+operator|+
+literal|1
+argument_list|,
+literal|1.0f
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|MAX_ENTRIES
+operator|=
+name|maxEntries
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|removeEldestEntry (Map.Entry<K, V> eldest)
+specifier|protected
+name|boolean
+name|removeEldestEntry
+parameter_list|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|K
+argument_list|,
+name|V
+argument_list|>
+name|eldest
+parameter_list|)
+block|{
+return|return
+name|size
+argument_list|()
+operator|>
+name|MAX_ENTRIES
+return|;
+block|}
 block|}
 block|}
 end_class
