@@ -403,6 +403,8 @@ argument_list|(
 name|HarFileSystem
 operator|.
 name|VERSION
+argument_list|,
+name|masterIndexPath
 argument_list|)
 expr_stmt|;
 specifier|final
@@ -443,17 +445,40 @@ return|return
 name|harFileSystem
 return|;
 block|}
-DECL|method|writeVersionToMasterIndexImpl (int version)
+DECL|method|createHarFileSystem (final Configuration conf, Path aHarPath)
 specifier|private
-name|void
-name|writeVersionToMasterIndexImpl
+name|HarFileSystem
+name|createHarFileSystem
 parameter_list|(
-name|int
-name|version
+specifier|final
+name|Configuration
+name|conf
+parameter_list|,
+name|Path
+name|aHarPath
 parameter_list|)
 throws|throws
-name|IOException
+name|Exception
 block|{
+name|localFileSystem
+operator|.
+name|mkdirs
+argument_list|(
+name|aHarPath
+argument_list|)
+expr_stmt|;
+specifier|final
+name|Path
+name|indexPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|aHarPath
+argument_list|,
+literal|"_index"
+argument_list|)
+decl_stmt|;
 specifier|final
 name|Path
 name|masterIndexPath
@@ -461,11 +486,106 @@ init|=
 operator|new
 name|Path
 argument_list|(
-name|harPath
+name|aHarPath
 argument_list|,
 literal|"_masterindex"
 argument_list|)
 decl_stmt|;
+name|localFileSystem
+operator|.
+name|createNewFile
+argument_list|(
+name|indexPath
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|localFileSystem
+operator|.
+name|exists
+argument_list|(
+name|indexPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|localFileSystem
+operator|.
+name|createNewFile
+argument_list|(
+name|masterIndexPath
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|localFileSystem
+operator|.
+name|exists
+argument_list|(
+name|masterIndexPath
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writeVersionToMasterIndexImpl
+argument_list|(
+name|HarFileSystem
+operator|.
+name|VERSION
+argument_list|,
+name|masterIndexPath
+argument_list|)
+expr_stmt|;
+specifier|final
+name|HarFileSystem
+name|harFileSystem
+init|=
+operator|new
+name|HarFileSystem
+argument_list|(
+name|localFileSystem
+argument_list|)
+decl_stmt|;
+specifier|final
+name|URI
+name|uri
+init|=
+operator|new
+name|URI
+argument_list|(
+literal|"har://"
+operator|+
+name|aHarPath
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|harFileSystem
+operator|.
+name|initialize
+argument_list|(
+name|uri
+argument_list|,
+name|conf
+argument_list|)
+expr_stmt|;
+return|return
+name|harFileSystem
+return|;
+block|}
+DECL|method|writeVersionToMasterIndexImpl (int version, Path masterIndexPath)
+specifier|private
+name|void
+name|writeVersionToMasterIndexImpl
+parameter_list|(
+name|int
+name|version
+parameter_list|,
+name|Path
+name|masterIndexPath
+parameter_list|)
+throws|throws
+name|IOException
+block|{
 comment|// write Har version into the master index:
 specifier|final
 name|FSDataOutputStream
@@ -870,6 +990,154 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testPositiveLruMetadataCacheFs ()
+specifier|public
+name|void
+name|testPositiveLruMetadataCacheFs
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Init 2nd har file system on the same underlying FS, so the
+comment|// metadata gets reused:
+name|HarFileSystem
+name|hfs
+init|=
+operator|new
+name|HarFileSystem
+argument_list|(
+name|localFileSystem
+argument_list|)
+decl_stmt|;
+name|URI
+name|uri
+init|=
+operator|new
+name|URI
+argument_list|(
+literal|"har://"
+operator|+
+name|harPath
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|hfs
+operator|.
+name|initialize
+argument_list|(
+name|uri
+argument_list|,
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// the metadata should be reused from cache:
+name|assertTrue
+argument_list|(
+name|hfs
+operator|.
+name|getMetadata
+argument_list|()
+operator|==
+name|harFileSystem
+operator|.
+name|getMetadata
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Create more hars, until the cache is full + 1; the last creation should evict the first entry from the cache
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<=
+name|hfs
+operator|.
+name|METADATA_CACHE_ENTRIES_DEFAULT
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|Path
+name|p
+init|=
+operator|new
+name|Path
+argument_list|(
+name|rootPath
+argument_list|,
+literal|"path1/path2/my"
+operator|+
+name|i
+operator|+
+literal|".har"
+argument_list|)
+decl_stmt|;
+name|createHarFileSystem
+argument_list|(
+name|conf
+argument_list|,
+name|p
+argument_list|)
+expr_stmt|;
+block|}
+comment|// The first entry should not be in the cache anymore:
+name|hfs
+operator|=
+operator|new
+name|HarFileSystem
+argument_list|(
+name|localFileSystem
+argument_list|)
+expr_stmt|;
+name|uri
+operator|=
+operator|new
+name|URI
+argument_list|(
+literal|"har://"
+operator|+
+name|harPath
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|hfs
+operator|.
+name|initialize
+argument_list|(
+name|uri
+argument_list|,
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|hfs
+operator|.
+name|getMetadata
+argument_list|()
+operator|!=
+name|harFileSystem
+operator|.
+name|getMetadata
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testPositiveInitWithoutUnderlyingFS ()
 specifier|public
 name|void
@@ -1080,6 +1348,14 @@ comment|// write an unsupported version:
 name|writeVersionToMasterIndexImpl
 argument_list|(
 literal|7777
+argument_list|,
+operator|new
+name|Path
+argument_list|(
+name|harPath
+argument_list|,
+literal|"_masterindex"
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// init the Har:
